# streamlit-diagnostic-demo

./: LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
demo_data/: dev.csv
diagnostic_demo/: actions.py  app.py
diagnostic_demo/app_utils/: page_view.py
diagnostic_demo/llm/: llm.py  prompts.py
diagnostic_demo/style/: style.css
diagnostic_demo/xai/: attribution.py  calibration.py  fairness.py  simple_modeling.py
